--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Excusion</title>
+        <link rel="stylesheet" href="./resources/css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="#">Download Excursion (Coming soon!)</a>
+    </body>
 </html>
