Finish site structure and styling

--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
     <body>
         <h1>Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (Coming soon!)</a>
+        <p>
+            <video autoplay muted loop>
+                <source src="./resources/excursion.mp4" type="video/mp4">
+                Your device does not support this video.
+            </video>
+        </p>
+        <h2>Your personal travel guide</h2>
+        <span>Excursion remembers places you like, and recommends new points of interest around you.</span>
+        <p>
+            <img src="./resources/camp.jpg" />
+        </p>
+        <p>
+            <img src="./resources/phone.png" />
+        </p>
+        <h2>Coming soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
     </body>
 </html>
